--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h5>Nosotros</h5>
       </div>
     </div>
-    <div class="row mt-4">
+    <div class="row mt-4 align-items-center">
       <div class="col-sm-12 col-md-5 col-xl-4 text-center">
         <img id="logo" class="card-img-top" src="img/logo.jpg" alt="logo Coomutranstur">
       </div>
@@ -135,13 +135,14 @@
       </div>
     </div>
     <div class="row mt-4">
-      <div class="col-sm-6 col-md-4 col-xl-4 text-center">
+      <div class="col text-center">
         <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
       </div>
-      <!-- <div class="col-sm-0 col-md-4 col-xl-4">
+      <div class="w-100 mt-4"></div>
+      <div class="sr-only-sm col-sm-0 col-md-4 col-xl-4">
         <img class="card-img-top" src="holder.js/200x240/" alt="">
-      </div> -->
+      </div>
       <div class="col-sm-6 col-md-4 col-xl-4">
         <h5>Valores corporativos:</h5>
         <ul>
@@ -159,7 +160,7 @@
 
   <!-- Footer  -->
   <section id="footer" class="">
-    <div class="row container-fluid mb-4">
+    <div class="row container-fluid mb-4 align-items-center">
       <div class="col-6 text-center">
         <p>Telefonos: <br>
           3148340811 <br>
