--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <h5>POLÍTICA DE CALIDAD </h5>
       </div>
     </div>
-    <div class="row mt-4">
-      <div class="col text-center">
+    <div class="row justify-content-center mt-4">
+      <div class="col-9 text-center">
         <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
       </div>
@@ -173,9 +173,9 @@
         </p>
       </div>
       <div class="col-6 text-center">
-        <p>Facebook</p>
-        <p>Instagram</p>
-        <p>Twitter</p>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter-square"></i>
       </div>
     </div>
 
