--- a/index.html
+++ b/index.html
@@ -173,9 +173,11 @@
         </p>
       </div>
       <div class="col-6 text-center">
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-twitter-square"></i>
+          <span style="font-size: 3em;">
+              <i class="fab fa-facebook"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter-square"></i>
+          </span>
       </div>
     </div>
 
