--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>COOMUSTRANSTUR</title>
   <link rel="icon" type="image/png" href="img/logo.png" />
@@ -29,7 +29,7 @@
       <header>
         <div class="container">
           <nav class="row navbar navbar-expand-lg pb-1">
-            <a class="navbar-brand" href="#">Coomutranstur</a>
+            <a class="navbar-brand" href="#">Coomutranstur <br></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
               ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon">
@@ -134,7 +134,7 @@
         <h5>POLÍTICA DE CALIDAD </h5>
       </div>
     </div>
-    <div class="row justify-content-center mt-4">
+    <div class="row justify-content-around mt-4">
       <div class="col-9 text-center">
         <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
@@ -161,23 +161,40 @@
   <!-- Footer  -->
   <section id="footer" class="">
     <div class="row container-fluid mb-4 align-items-center">
-      <div class="col-6 text-center">
-        <p>Telefonos: <br>
-          3148340811 <br>
-          3148302152 <br>
-          3155777327
-        </p>
+      <div class="col-12 col-sm-4">
+        <div class="row">
+          <div class="col-3 d-flex justify-content-start">
+            Telefonos:
+          </div>
+          <div class="col d-flex justify-content-end">
+            +57 3148340811 <br>
+            +57 3148302152 <br>
+            +57 3155777327
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3 d-flex justify-content-start">
+            Correo:
+          </div>
+          <div class="col d-flex justify-content-end">
+            coomutranstur@hotmail.com
+          </div>
+        </div>
         <p>
-          Correo: <br>
-          coomutranstur@hotmail.com
         </p>
       </div>
-      <div class="col-6 text-center">
-          <span style="font-size: 3em;">
-              <i class="fab fa-facebook"></i>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-twitter-square"></i>
-          </span>
+      <div class="w-100"></div>
+      <div class="col-12 text-center">
+        <em id="nit">NIT: 830.500.789-9</em>
+      </div>
+      
+      <div class="w-100"></div>
+      <div class="col-12 text-center">
+        <span style="font-size: 3em;">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter-square"></i>
+        </span>
       </div>
     </div>
 
