--- a/index.html
+++ b/index.html
@@ -160,46 +160,43 @@
 
   <!-- Footer  -->
   <section id="footer" class="">
-    <div class="row container-fluid mb-4 align-items-center">
-      <div class="col-12 col-sm-4">
-        <div class="row">
-          <div class="col-3 d-flex justify-content-start">
-            Telefonos:
-          </div>
-          <div class="col d-flex justify-content-end">
-            +57 3148340811 <br>
-            +57 3148302152 <br>
-            +57 3155777327
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-3 d-flex justify-content-start">
-            Correo:
-          </div>
-          <div class="col d-flex justify-content-end">
-            coomutranstur@hotmail.com
+    <div class="container justify-content-around text-center mb-4">
+      <div class="row">
+        <div class="col-sm-3 col-md-4">
+          <div class="media">
+            <!-- Telefonos: -->
+            <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
+            <div class="media-body">
+              (57) 3148340811 <br>
+              (57) 3148302152 <br>
+              (57) 3155777327
+            </div>
           </div>
         </div>
-        <p>
-        </p>
-      </div>
-      <div class="w-100"></div>
-      <div class="col-12 text-center">
-        <em id="nit">NIT: 830.500.789-9</em>
-      </div>
-      
-      <div class="w-100"></div>
-      <div class="col-12 text-center">
-        <span style="font-size: 3em;">
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-twitter-square"></i>
-        </span>
+
+        <div class="col-sm-3 col-md-4 align-self-center">
+          <div class="media d-flex align-items-center">
+            <!-- Correo: -->
+            <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
+            <div class="media-body">
+              coomutranstur@hotmail.com
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="w-100"></div> -->
+        <div class="col-sm-6 col-md-4">
+          <span style="font-size: 3em;">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter-square"></i>
+          </span>
+        </div>
       </div>
     </div>
 
     <div id="derechos" class="col text-center">
-      <p>Todos los derechos reservados</p>
+      <p><em id="nit">NIT: 830.500.789-9</em></p>
     </div>
 
   </section>
