--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
     </div>
 
     <div id="derechos" class="col text-center">
+      <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
+          CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
+          </p>
       <p><em id="nit">NIT: 830.500.789-9</em></p>
     </div>
 
