--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                   <a class="nav-link" href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#politica">Política de Calidad</a>
+                  </li>
+                <li class="nav-item">
                   <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
                 </li>
                 <li class="nav-item">
@@ -128,34 +131,36 @@
       </div>
     </div>
     <hr>
+  </section>
 
-    <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col-12">
-        <h5>POLÍTICA DE CALIDAD </h5>
-      </div>
-    </div>
-    <div class="row justify-content-around mt-4">
-      <div class="col-9 text-center">
-        <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
-          nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
-      </div>
-      <div class="w-100 mt-4"></div>
-      <div class="sr-only-sm col-sm-0 col-md-4 col-xl-4">
-        <img class="card-img-top" src="holder.js/200x240/" alt="">
-      </div>
-      <div class="col-sm-6 col-md-4 col-xl-4">
-        <h5>Valores corporativos:</h5>
-        <ul>
-          <li>Ayuda mutua</li>
-          <li>Responsabilidad</li>
-          <li>Honestidad </li>
-          <li>Democracia</li>
-          <li>Equidad </li>
-          <li>Solidaridad </li>
-          <li>Honestidad y transparencia</li>
-        </ul>
-      </div>
-    </div>
+  <section class="container" id="politica">
+      <div class="row pb-3 pt-3 text-center bg-light">
+          <div class="col-12">
+            <h5>POLÍTICA DE CALIDAD </h5>
+          </div>
+        </div>
+        <div class="row justify-content-around mt-4">
+          <div class="col-9 text-center">
+            <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
+              nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
+          </div>
+          <div class="w-100 mt-4"></div>
+          <div class="sr-only-sm col-sm-0 col-md-4 col-xl-4">
+            <img class="card-img-top" src="holder.js/200x240/" alt="">
+          </div>
+          <div class="col-sm-6 col-md-4 col-xl-4">
+            <h5>Valores corporativos:</h5>
+            <ul>
+              <li>Ayuda mutua</li>
+              <li>Responsabilidad</li>
+              <li>Honestidad </li>
+              <li>Democracia</li>
+              <li>Equidad </li>
+              <li>Solidaridad </li>
+              <li>Honestidad y transparencia</li>
+            </ul>
+          </div>
+        </div>
   </section>
 
   <!-- Footer  -->
