--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body onmousedown="return false;" onmousedown="return false;"  onselectstart="return false;">
   <div class="loader"></div>
   <!-- Primero sale la imagen, luego el contenido, damos un delay para que demore 1 o 2 seg en salir -->
   <!-- INDEX -->
