--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body onmousedown="return false;" onmousedown="return false;"  onselectstart="return false;">
-  <div class="loader"></div>
+<body onmousedown="return false;" onmousedown="return false;"  onselectstart="return false;" class="invisible">
+  <div class="loader">
+    Cargando...
+  </div>
   <!-- Primero sale la imagen, luego el contenido, damos un delay para que demore 1 o 2 seg en salir -->
   <!-- INDEX -->
   <section class="container-fluid bg-index wow fadeIn" data-wow-duration="2s" data-wow-delay="0.3">
