--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body onmousedown="return false;" onmousedown="return false;"  onselectstart="return false;" class="invisible">
+<body onmousedown="return false;" onmousedown="return false;"  onselectstart="return false;" class="">
   <div class="loader">
     Cargando...
   </div>
