--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>COOMUSTRANSTUR</title>
+  <title>COOMUSTRANSTUR F</title>
   <link rel="icon" type="image/png" href="img/logo.png" />
 
   <link rel="stylesheet" href="css/normalize.css">
