--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body onmousedown="return false;" onmousedown="return false;"  onselectstart="return false;" class="">
-  <div class="loader">
-    Cargando...
-  </div>
+  <div class="loader text-center align-self-center"></div>
   <!-- Primero sale la imagen, luego el contenido, damos un delay para que demore 1 o 2 seg en salir -->
   <!-- INDEX -->
   <section class="container-fluid bg-index wow fadeIn" data-wow-duration="2s" data-wow-delay="0.3">
@@ -216,14 +215,21 @@
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
-  <script src="js/jquery.min.js"></script>
+  <!-- <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/wow.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/holder.js"></script>
   <script src="js/scrollreveal.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js"></script> -->
+
+  <script>
+    $(window).load(function() {
+      $(".loader").fadeOut("slow");
+    });
+    </script>
 
 </body>
 
