--- a/index.html
+++ b/index.html
@@ -20,215 +20,227 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+<div class="js">
 
-<body onmousedown="return false;" onmousedown="return false;" onselectstart="return false;" class="">
-  <div class="loader text-center align-self-center"></div>
-  <!-- Primero sale la imagen, luego el contenido, damos un delay para que demore 1 o 2 seg en salir -->
-  <!-- INDEX -->
-  <section class="container-fluid bg-index wow fadeIn" data-wow-duration="2s" data-wow-delay="0.3">
-    <div class="bg-color">
-      <header>
-        <div class="container">
-          <nav class="row navbar navbar-expand-lg pb-1">
-            <a class="navbar-brand" href="#">Coomutranstur <br></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-              ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon">
-                <i class="fas fa-bars"></i>
-              </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#servicios" id="link-servicios">Servicios <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#nosotros">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#politica">Política de Calidad</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contáctenos</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+  <body onmousedown="return false;" onmousedown="return false;" onselectstart="return false;" class="">
+    <div id="preloader"></div>
+
+    <!-- INDEX -->
+    <section class="container-fluid bg-index wow fadeIn" data-wow-duration="2s" data-wow-delay="0.3">
+      <div class="bg-color">
+        <header>
+          <div class="container">
+            <nav class="row navbar navbar-expand-lg pb-1">
+              <a class="navbar-brand" href="#">Coomutranstur <br></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                  <i class="fas fa-bars"></i>
+                </span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#servicios" id="link-servicios">Servicios <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#nosotros">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#politica">Política de Calidad</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contáctenos</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </header>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="flecha-abajo">
+          <a href="#servicios"><i class="fa fa-angle-down"></i></a>
         </div>
-      </header>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="flecha-abajo">
-        <a href="#servicios"><i class="fa fa-angle-down"></i></a>
       </div>
-    </div>
-  </section>
-  <!-- FIN INDEX -->
+    </section>
+    <!-- FIN INDEX -->
 
 
-  <!-- Lista de servicios  -->
-  <section class="container" id="servicios">
-    <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col-12">
-        <h5>Servicios</h5>
+    <!-- Lista de servicios  -->
+    <section class="container" id="servicios">
+      <div class="row pb-3 pt-3 text-center bg-light">
+        <div class="col-12">
+          <h5>Servicios</h5>
+        </div>
       </div>
-    </div>
-    <div class="row mt-4">
-      <div class="col-xl-6">
-        <img class="card-img-top" src="holder.js/315x180/" alt="">
+      <div class="row mt-4">
+        <div class="col-xl-6">
+          <img class="card-img-top" src="holder.js/315x180/" alt="">
+        </div>
+        <div class="col-xl-6 wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0s">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
+        </div>
       </div>
-      <div class="col-xl-6 wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0s">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-          anim id est laborum.</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Acerca de  -->
-  <section class="container" id="nosotros">
-    <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col-12">
-        <h5>Nosotros</h5>
+    <!-- Acerca de  -->
+    <section class="container" id="nosotros">
+      <div class="row pb-3 pt-3 text-center bg-light">
+        <div class="col-12">
+          <h5>Nosotros</h5>
+        </div>
       </div>
-    </div>
-    <div class="row mt-4 align-items-center">
-      <div class="col-sm-12 col-md-5 col-xl-4 text-center">
-        <img id="logo" class="card-img-top" src="img/logo.jpg" alt="logo Coomutranstur">
+      <div class="row mt-4 align-items-center">
+        <div class="col-sm-12 col-md-5 col-xl-4 text-center">
+          <img id="logo" class="card-img-top" src="img/logo.jpg" alt="logo Coomutranstur">
+        </div>
+        <div class="col-sm-12 col-md-7 col-xl-8 wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0s">
+          <p>Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
+            solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
+            Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
+            comunidad
+            en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte. Asociando a
+            personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su trabajo.
+            Establecido el decreto 4588 de 2006.</p>
+        </div>
       </div>
-      <div class="col-sm-12 col-md-7 col-xl-8 wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0s">
-        <p>Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
-          solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
-          Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y comunidad
-          en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte. Asociando a
-          personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de su trabajo.
-          Establecido el decreto 4588 de 2006.</p>
-      </div>
-    </div>
-    <hr>
+      <hr>
 
-    <div class="row mt-4">
-      <div class="col">
-        <h3 class="display-4 text-center">Misión</h3>
-        <p>
-          Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias promoviendo
-          el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
-          mejoramiento de la calidad de vida a través del empleo decente.
-        </p>
+      <div class="row mt-4">
+        <div class="col">
+          <h3 class="display-4 text-center">Misión</h3>
+          <p>
+            Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
+            promoviendo
+            el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
+            mejoramiento de la calidad de vida a través del empleo decente.
+          </p>
+        </div>
+        <div class="col">
+          <h3 class="display-4 text-center">Visión</h3>
+          <p>
+            La Cooperativa COOMUTRANSTUR se consolidará como una empresa del sector de economía solidaria, que provea a
+            los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
+            construcción del capital social en Colombia.
+          </p>
+        </div>
       </div>
-      <div class="col">
-        <h3 class="display-4 text-center">Visión</h3>
-        <p>
-          La Cooperativa COOMUTRANSTUR se consolidará como una empresa del sector de economía solidaria, que provea a
-          los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
-          construcción del capital social en Colombia.
-        </p>
-      </div>
-    </div>
-    <hr>
-  </section>
+      <hr>
+    </section>
 
-  <section class="container" id="politica">
-    <div class="row pb-3 pt-3 text-center bg-light">
-      <div class="col-12">
-        <h5>POLÍTICA DE CALIDAD </h5>
+    <section class="container" id="politica">
+      <div class="row pb-3 pt-3 text-center bg-light">
+        <div class="col-12">
+          <h5>POLÍTICA DE CALIDAD </h5>
+        </div>
       </div>
-    </div>
-    <div class="row justify-content-around mt-4">
-      <div class="col-9 text-center">
-        <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
-          nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
+      <div class="row justify-content-around mt-4">
+        <div class="col-9 text-center">
+          <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
+            nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
+        </div>
+        <div class="w-100 mt-4"></div>
+        <div class="sr-only-sm col-sm-0 col-md-4 col-xl-4">
+          <img class="card-img-top" src="holder.js/200x240/" alt="">
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-4">
+          <h5>Valores corporativos:</h5>
+          <ul>
+            <li>Ayuda mutua</li>
+            <li>Responsabilidad</li>
+            <li>Honestidad </li>
+            <li>Democracia</li>
+            <li>Equidad </li>
+            <li>Solidaridad </li>
+            <li>Honestidad y transparencia</li>
+          </ul>
+        </div>
       </div>
-      <div class="w-100 mt-4"></div>
-      <div class="sr-only-sm col-sm-0 col-md-4 col-xl-4">
-        <img class="card-img-top" src="holder.js/200x240/" alt="">
-      </div>
-      <div class="col-sm-6 col-md-4 col-xl-4">
-        <h5>Valores corporativos:</h5>
-        <ul>
-          <li>Ayuda mutua</li>
-          <li>Responsabilidad</li>
-          <li>Honestidad </li>
-          <li>Democracia</li>
-          <li>Equidad </li>
-          <li>Solidaridad </li>
-          <li>Honestidad y transparencia</li>
-        </ul>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Footer  -->
-  <section id="footer" class="">
-    <div class="container justify-content-around text-center mb-4">
-      <div class="row">
-        <div class="col-sm-3 col-md-4">
-          <div class="media">
-            <!-- Telefonos: -->
-            <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
-            <div class="media-body">
-              (57) 3148340811 <br>
-              (57) 3148302152 <br>
-              (57) 3155777327
+    <!-- Footer  -->
+    <section id="footer" class="">
+      <div class="container justify-content-around text-center mb-4">
+        <div class="row">
+          <div class="col-sm-3 col-md-4">
+            <div class="media">
+              <!-- Telefonos: -->
+              <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
+              <div class="media-body">
+                (57) 3148340811 <br>
+                (57) 3148302152 <br>
+                (57) 3155777327
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-sm-3 col-md-4 align-self-center">
-          <div class="media d-flex align-items-center">
-            <!-- Correo: -->
-            <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
-            <div class="media-body">
-              coomutranstur@hotmail.com
+          <div class="col-sm-3 col-md-4 align-self-center">
+            <div class="media d-flex align-items-center">
+              <!-- Correo: -->
+              <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
+              <div class="media-body">
+                coomutranstur@hotmail.com
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- <div class="w-100"></div> -->
-        <div class="col-sm-6 col-md-4">
-          <span style="font-size: 3em;">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter-square"></i>
-          </span>
+          <!-- <div class="w-100"></div> -->
+          <div class="col-sm-6 col-md-4">
+            <span style="font-size: 3em;">
+              <i class="fab fa-facebook"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter-square"></i>
+            </span>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div id="derechos" class="col text-center">
-      <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
-        CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
-      </p>
-      <p><em id="nit">NIT: 830.500.789-9</em></p>
-    </div>
+      <div id="derechos" class="col text-center">
+        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
+          CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
+        </p>
+        <p><em id="nit">NIT: 830.500.789-9</em></p>
+      </div>
 
-  </section>
+    </section>
 
 
-  <!-- SCRIPTS -->
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- SCRIPTS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
-  <!-- <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/wow.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/holder.js"></script>
   <script src="js/scrollreveal.min.js"></script>
-  <script src="js/app.js"></script> -->
+  <script src="js/app.js"></script>
 
-  <script>
-    
-  </script>
+    <script>
+      jQuery(document).ready(function ($) {
+        // site preloader -- also uncomment the div in the header and the css style for #preloader
+        $(window).load(function () {
+          $("#preloader").fadeOut("slow", function () {
+            $(this).remove();
+          });
+        });
+      });
+    </script>
 
-</body>
+  </body>
+</div>
 
 </html>
