--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>COOMUSTRANSTUR F</title>
+  <title>COOMUSTRANSTUR</title>
   <link rel="icon" type="image/png" href="img/logo.png" />
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -31,7 +31,7 @@
         <header>
           <div class="container">
             <nav class="row navbar navbar-expand-lg pb-1">
-              <a class="navbar-brand" href="#">Coomutranstur <br></a>
+              <a class="navbar-brand" href="#">Coomutranstur<br></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
