--- a/alianzas.html
+++ b/alianzas.html
@@ -52,14 +52,27 @@
     </div>
   </section>
 
-    <!-- SCRIPTS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/wow.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/holder.js"></script>
-    <script src="js/scrollreveal.min.js"></script>
-    <script src="js/app.js"></script>
+  <section>
+    <div class="container-fluid">
+      <div class="media">
+        <img src="holder.js/200x200">
+        <div class="media-body">
+          <a href="#!"><h5>Restaurante y Hotel El Buen Gusto</h5></a>
+          Propietario: STELLA - 3148589198 - San Cipriano <hr>
+          Servicios que ofrece: 
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SCRIPTS -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/holder.js"></script>
+  <script src="js/scrollreveal.min.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
