--- a/alianzas.html
+++ b/alianzas.html
@@ -57,9 +57,18 @@
       <div class="media">
         <img src="holder.js/200x200">
         <div class="media-body">
-          <a href="#!"><h5>Restaurante y Hotel El Buen Gusto</h5></a>
-          Propietario: STELLA - 3148589198 - San Cipriano <hr>
-          Servicios que ofrece: 
+          <a href="#!">
+            <h5>Restaurante y Hotel El Buen Gusto</h5>
+          </a>
+          Propietario: STELLA - 3148589198 - San Cipriano
+          <hr>
+          Servicios que ofrece:
+          <i class="fas fa-utensils fa-2x ml-2"></i>
+          <i class="fas fa-concierge-bell fa-2x ml-2"></i>
+          <i class="fas fa-glass-martini fa-2x ml-2"></i>
+          <hr>
+          Correo: elbuengusto@gmail.com <br>
+          <a href="">www.facebook.com/elbuengusto</a>
         </div>
       </div>
     </div>
