--- a/alianzas.html
+++ b/alianzas.html
@@ -54,23 +54,28 @@
 
   <section>
     <div class="container-fluid">
-      <div class="media">
-        <img src="holder.js/200x200">
-        <div class="media-body">
-          <a href="#!">
-            <h5>Restaurante y Hotel El Buen Gusto</h5>
-          </a>
-          Propietario: STELLA - 3148589198 - San Cipriano
-          <hr>
-          Servicios que ofrece:
-          <i class="fas fa-utensils fa-2x ml-2"></i>
-          <i class="fas fa-concierge-bell fa-2x ml-2"></i>
-          <i class="fas fa-glass-martini fa-2x ml-2"></i>
-          <hr>
-          Correo: elbuengusto@gmail.com <br>
-          <a href="">www.facebook.com/elbuengusto</a>
+      <div class="alianza row align-items-center">
+
+        <div class="col-4 text-center">
+          <img src="holder.js/200x200">
+        </div>
+        <div class="col-8">
+          <h5>Restaurante y Hotel El Buen Gusto</h5>
+          <div>
+            Propietario: STELLA  -  San Cipriano
+            <hr>
+            Servicios que ofrece:
+            <i class="fas fa-utensils fa-2x ml-2"></i>
+            <i class="fas fa-concierge-bell fa-2x ml-2"></i>
+            <i class="fas fa-glass-martini fa-2x ml-2"></i>
+            <hr>
+            Telefono: 3148589198 <br>
+            Correo: elbuengusto@gmail.com <br>
+            <a href="">www.facebook.com/elbuengusto</a>
+          </div>
         </div>
       </div>
+
     </div>
   </section>
 
