--- a/alianzas.html
+++ b/alianzas.html
@@ -56,10 +56,10 @@
     <div class="container-fluid">
       <div class="alianza row align-items-center">
 
-        <div class="col-4 text-center">
+        <div class="col-sm-4 text-center">
           <img src="holder.js/200x200">
         </div>
-        <div class="col-8">
+        <div class="col-sm-8">
           <h5>Restaurante y Hotel El Buen Gusto</h5>
           <div>
             Propietario: STELLA  -  San Cipriano
