--- a/alianzas.html
+++ b/alianzas.html
@@ -53,26 +53,36 @@
   </section>
 
   <section>
-    <div class="container-fluid">
+    <div class="container">
       <div class="alianza row align-items-center">
 
         <div class="col-sm-4 text-center">
           <img src="holder.js/200x200">
         </div>
         <div class="col-sm-8">
-          <h5>Restaurante y Hotel El Buen Gusto</h5>
-          <div>
-            Propietario: STELLA  -  San Cipriano
-            <hr>
-            Servicios que ofrece:
-            <i class="fas fa-utensils fa-2x ml-2"></i>
-            <i class="fas fa-concierge-bell fa-2x ml-2"></i>
-            <i class="fas fa-glass-martini fa-2x ml-2"></i>
-            <hr>
-            Telefono: 3148589198 <br>
-            Correo: elbuengusto@gmail.com <br>
-            <a href="">www.facebook.com/elbuengusto</a>
-          </div>
+
+          <div class="row">
+            <div class="col">
+              <div class="alianza-titulo"><h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5></div>
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+            </div>
+            <div class="col">
+              Telefono: 3148589198 <br>
+              Correo: elbuengusto@gmail.com <br>
+              <a href="">www.facebook.com/elbuengusto</a>
+
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
+              Servicios:
+              <i class="fas fa-utensils fa-2x ml-2"></i>
+              <i class="fas fa-concierge-bell fa-2x ml-2"></i>
+              <i class="fas fa-glass-martini fa-2x ml-2"></i>
+            </div>
+
+          </div>         
         </div>
       </div>
 
