--- a/alianzas.html
+++ b/alianzas.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <section class="container-fluid bg-alainza wow fadeIn" data-wow-duration="2s" data-wow-delay="0.3">
+  <section class="container-fluid bg-alainza">
     <div class="bg-color">
       <header>
         <div class="container">
@@ -94,10 +94,9 @@
     </div>
   </section>
 
-  <div >
-    <p>hola</p>
-  </div>
 
+
+  
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
